--- a/.github/workflows/winget.yml
+++ b/.github/workflows/winget.yml
@@ -14,24 +14,22 @@ jobs:
       - name: Preparation
         run: |
           # Get local uploaded manifest version of the package
-          #$String = Get-Content -Path "Scripts\WinGet_Manifests\TeamSophia.SophiaScript.yaml" | Where-Object -FilterScript {$_ -match "ManifestVersion"}
-          #$LocalManifest = $String -split " " | Select-Object -Last 1
+          $String = Get-Content -Path "Scripts\WinGet_Manifests\TeamSophia.SophiaScript.yaml" | Where-Object -FilterScript {$_ -match "ManifestVersion"}
+          $LocalManifest = $String -split " " | Select-Object -Last 1
 
           # Get latest supported manifest version provided
           # https://github.com/microsoft/winget-cli/tree/master/schemas/JSON/manifests
-
-          # https://github.com/microsoft/winget-cli/tree/master/schemas/JSON/manifests/latest
           $Parameters = @{
-            Uri             = "https://raw.githubusercontent.com/microsoft/winget-cli/refs/heads/master/schemas/JSON/manifests/latest/manifest.version.latest.json"
+            Uri             = "https://api.github.com/repos/microsoft/winget-cli/contents/schemas/JSON/manifests"
             UseBasicParsing = $true
             Verbose         = $true
           }
-          #$LatestManifest = ((Invoke-RestMethod @Parameters).properties | Where-Object -FilterScript {$_.ManifestVersion.description -eq "The manifest syntax version"}).ManifestVersion.default
+          $LatestManifest = ((Invoke-RestMethod @Parameters).name | Where-Object {($_ -ne "preview") -and ($_ -ne "latest")}) -replace ("v", "") | Sort-Object -Property {[System.Version]$_} | Select-Object -Last 1
 
           if ([System.Version]$LocalManifest -lt [System.Version]$LatestManifest)
           {
-            #Write-Warning -Message "New $($LatestManifest) manifest available. Edit manifests in Scripts\WinGet_Manifests"
-            #exit
+            Write-Warning -Message "A new manifest $($LatestManifest) available. Edit manifests in Scripts\WinGet_Manifests."
+            exit
           }
 
           # Get latest version tag for Windows 11
